[package]
edition      = "2024"
name         = "temperature-probe"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "temperature-probe"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }
critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32c6",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }

embedded-hal-bus = "0.3.0"

# peripherals
bme280 = "0.5.1"
embedded-graphics = "0.8.1"
mini-oled = "0.1.3"
heapless = "0.9.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
